tests/neg/syntax_pp_duplicate_else.baa
// RUN: expect-fail
// EXPECT: تكرار #وإلا داخل نفس الكتلة

#تعريف ميزة_مكررة ١

#إذا_عرف ميزة_مكررة
صحيح فرع() {
    إرجع ١.
}
#وإلا
صحيح فرع() {
    إرجع ٠.
}
#وإلا
صحيح فرع() {
    إرجع ٢.
}
#نهاية
